@@ -45,6 +45,7 @@ use TYPO3\CMS\Frontend\ContentObject\ContentObjectRenderer;
 
 
 use JambageCom\Div2007\Utility\FrontendUtility;
+use JambageCom\Div2007\Utility\HtmlUtility;
 
 use JambageCom\Transactor\Constants\Action;
 use JambageCom\Transactor\Constants\Feature;
@@ -184,6 +185,13 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
         return $referenceUid;
     }
 
+    // This method is implemented to test function calls.
+    static public function test (
+    )
+    {
+        debug('', 'Start::test'); // keep this
+    }
+
     static public function checkLoaded (
         &$errorMessage,
         Localization $languageObj,
@@ -218,10 +226,17 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
     /**
     * deprecated old API
     * use the render method instead
-    * 
+    *
     * Include handle extension library
     */
     static public function includeHandleLib (
+        &$finalize,
+        &$finalVerify,
+        &$gatewayStatus,
+        &$markerArray,
+        &$templateFilename,
+        &$localTemplateCode,
+        &$errorMessage,
         $handleLib,
         $confScript,
         $extensionKey,
@@ -238,12 +253,7 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
         $orderNumber, // text string of the order number
         $notificationEmail,
         $cardRow,
-        &$finalize,
-        &$finalVerify,
-        &$markerArray,
-        &$templateFilename,
-        &$localTemplateCode,
-        &$errorMessage
+        $variantFields
     )
     {
         $gatewayStatus = '';
@@ -275,11 +285,11 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
             $orderNumber,
             $notificationEmail,
             $cardRow,
-            ''
+            $variantFields
         );
         return $result;
     }
-    
+
     static public function render (
         &$finalize,
         &$finalVerify,
@@ -304,9 +314,22 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
         $orderNumber, // text string of the order number
         $notificationEmail,
         $cardRow,
-        ...$options // TODO: not yet used
+        ...$options
     )
     {
+        $variantFields = $options[0] ?: [];
+        if (!is_array($variantFields)) {
+            throw new \RuntimeException('Error in transactor: Render method parameter option[0] "' .json_decode($variantFields) . '" must be an array.  "JambageCom\Transactor\Api\Start"', 1711197986
+);
+        }
+        $extraData = $options[1] ?: '';
+
+// TODO:
+// siehe getTransactionDetails
+//     $returnUrl,
+//     $cancelUrl
+// aus $pidArray ermitteln
+
         $gatewayStatus = [];
         $languageObj = GeneralUtility::makeInstance(Localization::class);
         $cObj = FrontendUtility::getContentObjectRenderer();
@@ -316,7 +339,7 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
         $gatewayExtKey = '';
         $result = '';
         $emConf = '';
-        $xhtmlFix = \JambageCom\Div2007\Utility\HtmlUtility::generateXhtmlFix();
+        $xhtmlFix = HtmlUtility::generateXhtmlFix();
 
         if (
             !is_array($itemArray) ||
@@ -342,7 +365,24 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
                         $confScript
                     );
                 if (is_object($gatewayProxyObject)) {
+                    $paymentBasket =
+                        PaymentApi::convertToTransactorBasket(
+                            $itemArray,
+                            $variantFields
+                        );
+
                     $ok = $gatewayProxyObject->transactionInit(
+                        Action::AUTHORIZE_TRANSFER,
+                        $paymentMethod,
+                        $extensionKey,
+                        $confScript['templateFile'] ?? '',
+                        $orderUid,
+                        $orderNumber,
+                        $confScript['currency'] ? $confScript['currency'] : 'EUR',
+                        $confScript['conf.'] ?? []
+                    );
+
+                    PaymentApi::storeInit(
                         Action::AUTHORIZE_TRANSFER,
                         $paymentMethod,
                         $extensionKey,
@@ -368,7 +408,7 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
                     if (isset($confScript['em.'])) {
                         $emConf = array_replace_recursive($emConf, $confScript['em.']);
                     }
-        
+
                     if ($emConf) {
                         $gatewayConf = array_replace_recursive($gatewayConf, $emConf);
                         $gatewayProxyObject->setConf($gatewayConf);
@@ -551,7 +591,7 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
 
                                 if (is_array($hiddenFieldsArray)) {
                                     foreach ($hiddenFieldsArray as $key => $value) {
-                                        $hiddenFields .= 
+                                        $hiddenFields .=
                                             '<input type="hidden" name="' . htmlspecialchars($key) .
                                             '" value="' . htmlspecialchars($value) . '"' . $xhtmlFix . '>' .
                                             chr(10);
@@ -568,7 +608,7 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
                                     }
                                     $script .= implode(chr(10), $scriptLines) . '></script>';
                                 }
-                                
+
                                 $formuri = $gatewayProxyObject->transactionFormGetActionURI();
                                 $gatewayProxyObject->setFormActionURI($formuri);
                                 $formParams = $gatewayProxyObject->transactionFormGetFormParms();
@@ -678,7 +718,7 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
                     $errorMessage .= '<br' . $xhtmlFix . '>' . $error;
                 }
             }
-        }                                    
+        }
 
         if ($finalize) {
             // add the markers for a processed transaction
@@ -690,7 +730,7 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
                     '_',
                     $key,
                     $parameter
-                ); 
+                );
             }
         }
 
@@ -994,7 +1034,7 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
                 );
             $transactionDetailsArray['transaction']['verifylink'] = $verifyLink;
         }
-        
+
         if (isset($confScript['conf.']) && is_array($confScript['conf.'])) {
             $transactionDetailsArray['options'] = $confScript['conf.'];
         }
@@ -1055,7 +1095,7 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
                         $goodsTotalDepositTax = $calculatedArray['deposittax']['goodstotal']['ALL'];
                         $goodsTotalDepositNoTax = $calculatedArray['depositnotax']['goodstotal']['ALL'];
                     }
-                    
+
                     if (
                         isset($calculatedArray['priceTax']['vouchertotal']) &&
                         isset($calculatedArray['priceTax']['vouchertotal']['ALL'])
@@ -1258,8 +1298,8 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
                     Field::HANDLING_TAX => $handling,
                     Field::TAX_PERCENTAGE => $tax,
                     Field::PRICE_ONLYTAX => (
-                            isset($actItem['priceTax']) && isset($actItem['totalNoTax']) ? 
-                            (static::fFloat($actItem['priceTax'] - $actItem['priceNoTax'])) : 
+                            isset($actItem['priceTax']) && isset($actItem['totalNoTax']) ?
+                            (static::fFloat($actItem['priceTax'] - $actItem['priceNoTax'])) :
                             0
                         ),
                     Field::PRICE_TOTAL_ONLYTAX => (
@@ -1397,7 +1437,7 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
         }
         return $result;
     }
-    
+
     static public function addMainWindowJavascript (
         &$errorMessage,
         array $confScript
@@ -1433,7 +1473,7 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
             }
         }
     }
-    
+
     /**
     * Render data entry forms for the user billing and shipping address
     */
@@ -1444,7 +1484,7 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
         $extensionKey,
         array $basket,
         $orderUid,
-        $orderNumber, // text string of the order number       
+        $orderNumber, // text string of the order number
         $currency,
         array $extraData
     ) {
@@ -1486,13 +1526,26 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
                         $orderUid,
                         $orderNumber,
                         $currency,
-                        $confScript['conf.'] ?? '',
+                        $confScript['conf.'] ?? null,
                         $basket,
                         $extraData
                     );
                 }
- 
+
                 if ($ok) {
+                    PaymentApi::storeInit(
+                        Action::AUTHORIZE_TRANSFER,
+                        $confScript['paymentMethod'],
+                        $extensionKey,
+                        $confScript['templateFile'] ?? '',
+                        $orderUid,
+                        $orderNumber,
+                        $currency,
+                        $confScript['conf.'] ?? null,
+                        $basket,
+                        $extraData
+                    );
+
                     if (class_exists($addressFeatureClass)) {
                         if (
                             method_exists($addressFeatureClass, 'init') &&
