@@ -1,3 +1,9 @@
+2024-03-28 Franz Holzinger <franz@ttproducts.de>
+    * remove the old API
+
+2023-11-18 Franz Holzinger <franz@ttproducts.de>
+    * new feature: Enhance API method Start::render. Parameter $variantFields
+
 2023-10-30 Franz Holzinger <franz@ttproducts.de>
     * new method getGatewayProxyObjectForExtension
 
